# CubeOn

backend/: .env.example  .gitignore  database.env.example  docker-compose.yml  keycloak.env.example  pyproject.toml  realm-export.json
backend/migrations/: env.py
backend/sql/: create-app-db.sh  create_keycloak-db.sh
backend/src/: config.py  main.py  repository.py
backend/src/auth/: kc.py
